--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="pracownia programowania witryn i aplikacji internetowych">
     <style>
       body {
-        background-color: #92cdd1;
+        background-color: yellow;
       }
     </style>
   </head>
@@ -237,3 +237,4 @@
 
   </body>
 </html>
+
