--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="pracownia programowania witryn i aplikacji internetowych">
     <style>
       body {
-        background-color: yellow;
+        background-color: pink;
       }
     </style>
   </head>
@@ -237,4 +237,5 @@
 
   </body>
 </html>
+
 
