Change background color and fix HTML formatting
Updated background color and cleaned up HTML structure.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="pracownia programowania witryn i aplikacji internetowych">
     <style>
       body {
-        background-color: pink;
+        background-color: #92cdd1;
       }
     </style>
   </head>
@@ -237,5 +237,6 @@
 
   </body>
 </html>
+
 
 
