--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="pracownia programowania witryn i aplikacji internetowych">
     <style>
       body {
-        background-color: #92cdd1;
+        background-color: #fb00ff;
       }
     </style>
   </head>
@@ -237,6 +237,7 @@
 
   </body>
 </html>
+
 
 
 
